fix sport program html z-index

--- a/audience/static/audience/sport_program.css
+++ b/audience/static/audience/sport_program.css
@@ -6,7 +6,7 @@ padding-left: 60px;
 
 .content-1 , table {
 border-collapse: collapse;
-z-index:-3;
+z-index:-5;
 }
 .content-1 table , th , td {
   width: 8vw;
